# ratio-assignment

./: Anchor.toml  README.md
app/: package.json
app/src/pages/: PageHome.tsx
programs/simple-farm/: Cargo.toml
programs/simple-farm/src/: constant.rs  error.rs  instructions.rs  lib.rs  processor.rs  states.rs  utils.rs
programs/simple-farm/src/processor/: process_create_global_state.rs
simple-cpi-2021-11-29/: README.md
simple-cpi-2021-11-29/simple-cli/: Anchor.toml
simple-cpi-2021-11-29/simple-cli/programs/simple-cli/: Cargo.toml
simple-cpi-2021-11-29/simple-cli/tests/: simple-cli.ts
simple-cpi-2021-11-29/simple-cpi/: Anchor.toml  package.json
simple-cpi-2021-11-29/simple-cpi/programs/mint-and-deposit/: Cargo.toml
simple-cpi-2021-11-29/simple-cpi/programs/mint-and-deposit/src/: lib.rs
simple-cpi-2021-11-29/simple-cpi/programs/pool/: Cargo.toml
simple-cpi-2021-11-29/simple-cpi/tests/: simple-cpi.ts
simple-farm-2021-11-16/: Anchor.toml  README.md
simple-farm-2021-11-16/app/: README.md  package-lock.json  package.json
simple-farm-2021-11-16/app/src/components/: Navbar.tsx
simple-farm-2021-11-16/app/src/pages/: PageHome.tsx
simple-farm-2021-11-16/app/src/routers/: index.tsx  types.ts
simple-farm-2021-11-16/programs/simple-farm/: Cargo.toml
simple-farm-2021-11-16/programs/simple-farm/src/: constant.rs  error.rs  instructions.rs  lib.rs  processor.rs  states.rs  (+1 more)
simple-farm-2021-11-16/tests/: simple_farm.ts
simple-mint-2021-11-24/: .gitignore  Anchor.toml  CONTRIBUTING.md
simple-mint-2021-11-24/programs/stable-pool-faucet/: Cargo.toml
(+14 files in other folders)
